--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    
     "start": "node ./bin/www"
   },
   "engines": {
@@ -19,6 +18,7 @@
     "mongoose": "^4.8.1",
     "morgan": "~1.7.0",
     "readline": "^1.3.0",
+    "request": "^2.79.0",
     "serve-favicon": "~2.3.0"
   }
 }
