--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.7.0",
     "readline": "^1.3.0",
     "request": "^2.79.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "uglify-js": "^2.7.5"
   }
 }
