--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.8.1",
     "morgan": "~1.7.0",
+    "ng-infinite-scroll": "^1.3.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "readline": "^1.3.0",
